class of front scss specifications

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="rank">5</div>
         
         <div class="front">
-            <img src="img/background1.jpg" alt="circle-img">
+            <img class="thumbnail" src="img/background1.jpg" alt="circle-img">
             <h3 class="game__name">Game Name</h3>
             <div class="stats">
                 <p class="viewers">123.2k</p>
