--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
         </div>
 
-        <div class="back">
+        <div class="more-info">
             <div class="streaming-info">
                 <p class="game-stat"><span>123k</span>Watching</p>
                 <p class="game-stat"><span>20.2k</span>Streams</p>
@@ -55,6 +55,7 @@
 
         </div>
     </div>
+    
 
 </body>
 </html>
