the class more-info specification, background adjustment, align img and columns

--- a/index.html
+++ b/index.html
@@ -37,14 +37,17 @@
 
            <div class="streamers">
                <div class="streamer">
+                    <div class="icon"><img src="img/circle-img-1.jpg" alt=""></div>
                    <p class="name">Gamer1</p>
                    <p class="number">32.1k</p>
                </div>
                <div class="streamer">
+                    <div class="icon"><img src="img/circle-img-2.jpg" alt=""></div>
                    <p class="name">Gamer2</p>
                    <p class="number">32.1k</p>
                </div>
                <div class="streamer">
+                    <div class="icon"><img src="img/circle-img-2.jpg" alt=""></div> 
                    <p class="name">Gamer3</p>
                    <p class="number">32.1k</p>
                </div>
