added psuedo-element on awesome icon

--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/scss/main.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
+    
 </head>
 <body>
 
@@ -19,7 +21,7 @@
             <img class="thumbnail" src="img/background1.jpg" alt="circle-img">
             <h3 class="game__name">Game Name</h3>
             <div class="stats">
-                <p class="viewers">123.2k</p>
+                <p class="viewers"></i>123.2k</p>
                 <div class="streamers">
                     <img src="img/circle-img-1.jpg" alt="img1">
                     <img src="img/circle-img-2.jpg" alt="img2">
