psuedo-element nesting font-awesome

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <img class="thumbnail" src="img/background1.jpg" alt="circle-img">
             <h3 class="game__name">Game Name</h3>
             <div class="stats">
-                <p class="viewers"></i>123.2k</p>
+                <p class="viewers icon"></i>123.2k</p>
                 <div class="streamers">
                     <img src="img/circle-img-1.jpg" alt="img1">
                     <img src="img/circle-img-2.jpg" alt="img2">
